# browser-fetch

./: CLAUDE.md  README.md  pyproject.toml
src/browser_fetch/: __init__.py  __main__.py  fetch.py  server.py
